--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 ---
 layout: default
+title: Новости
+lang: ru
 ---
 
-<h2>Новости</h2>
 <span class="news"><img src="images/bui.jpg" width="100" height="101" align="left" class="bleft" /><h3>Установлен плавучий буй</h3>
 <p>26 июля 2006г. завершена установка плавучего автоматического гидрометеорологического буя типа DB4280 (Aanderaa, Норвегия) в районе «Пенайские банки».</p></span>
 <span class="news"><img src="images/sms.jpg" width="100" height="127" align="left" class="bleft" /><h3>Установлена Спутниковая Система Швартовки</h3><p>07.10.2005г сдана в
-  эксплуатацию  Спутниковая Система Швартовки E-SeaFIX, установленная в районе Эксплуатационной ответственности Морского терминала ЗАО «КТК-Р».</p></span>
-		<span class="news"><img src="images/ashm.jpg" width="150" height="113" align="left" class="bleft" /><h3>Установлена Система гидрометеорологического
+	эксплуатацию  Спутниковая Система Швартовки E-SeaFIX, установленная в районе Эксплуатационной ответственности Морского терминала ЗАО «КТК-Р».</p></span>
+<span class="news"><img src="images/ashm.jpg" width="150" height="113" align="left" class="bleft" /><h3>Установлена Система гидрометеорологического
       мониторинга</h3><p>30.09.2004г сдана в эксплуатацию Система гидрометеорологического мониторинга в районе Эксплуатационной ответственности Морского терминала
       ЗАО «КТК-Р»  целью повышения безопасности эксплуатации ВПУ.</p></span>
-		<span class="news"><img src="images/lds.jpg" width="150" height="113" align="left" class="bleft" /><h3>Установлена Лазерная Система Швартовки</h3><p>29.07.2003г сдана
+<span class="news"><img src="images/lds.jpg" width="150" height="113" align="left" class="bleft" /><h3>Установлена Лазерная Система Швартовки</h3><p>29.07.2003г сдана
       в эксплуатацию Лазерная Система Швартовки Крупнотоннажных Судов (ЛСШКС), установленная на причалах  нефтерайона ОАО «Новороссийский Морской Торговый Порт».</p></span>
 
 
